// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorTranslator blending tests Blending with L*a*b colors 1`] = `
[
  "lab(54.291734 80.812455 69.88504)",
  "lab(41.112203 66.20831 23.413468)",
  "lab(29.563244 55.959822 -36.18907)",
  "lab(24.637463 57.339506 -83.54529)",
  "lab(29.567573 68.298653 -112.02943)",
]
`;

exports[`ColorTranslator blending tests Blending with L*a*b colors 2`] = `
[
  "lab(54.291734 80.812455 69.88504 / 1)",
  "lab(41.112203 66.20831 23.413468 / 1)",
  "lab(29.563244 55.959822 -36.18907 / 1)",
  "lab(24.637463 57.339506 -83.54529 / 1)",
  "lab(29.567573 68.298653 -112.02943 / 1)",
]
`;

exports[`ColorTranslator blending tests Blending with L*a*b colors 3`] = `
[
  {
    "L": 54.291734,
    "a": 80.812455,
    "b": 69.88504,
  },
  {
    "L": 41.112203,
    "a": 66.20831,
    "b": 23.413468,
  },
  {
    "L": 29.563244,
    "a": 55.959822,
    "b": -36.18907,
  },
  {
    "L": 24.637463,
    "a": 57.339506,
    "b": -83.54529,
  },
  {
    "L": 29.567573,
    "a": 68.298653,
    "b": -112.02943,
  },
]
`;

exports[`ColorTranslator blending tests Blending with L*a*b colors 4`] = `
[
  {
    "A": 1,
    "L": 54.291734,
    "a": 80.812455,
    "b": 69.88504,
  },
  {
    "A": 1,
    "L": 41.112203,
    "a": 66.20831,
    "b": 23.413468,
  },
  {
    "A": 1,
    "L": 29.563244,
    "a": 55.959822,
    "b": -36.18907,
  },
  {
    "A": 1,
    "L": 24.637463,
    "a": 57.339506,
    "b": -83.54529,
  },
  {
    "A": 1,
    "L": 29.567573,
    "a": 68.298653,
    "b": -112.02943,
  },
]
`;

exports[`ColorTranslator blending tests Blending with L*a*b colors 5`] = `
[
  "lab(54.291734 80.812455 69.88504)",
  "lab(29.563244 55.959822 -36.18907)",
  "lab(29.567573 68.298653 -112.02943)",
]
`;

exports[`ColorTranslator blending tests Blending with L*a*b colors 6`] = `
[
  "lab(54.291734 80.812455 69.88504 / 1)",
  "lab(29.563244 55.959822 -36.18907 / 1)",
  "lab(29.567573 68.298653 -112.02943 / 1)",
]
`;

exports[`ColorTranslator blending tests Blending with L*a*b colors 7`] = `
[
  {
    "L": 54.291734,
    "a": 80.812455,
    "b": 69.88504,
  },
  {
    "L": 29.563244,
    "a": 55.959822,
    "b": -36.18907,
  },
  {
    "L": 29.567573,
    "a": 68.298653,
    "b": -112.02943,
  },
]
`;

exports[`ColorTranslator blending tests Blending with L*a*b colors 8`] = `
[
  {
    "A": 1,
    "L": 54.291734,
    "a": 80.812455,
    "b": 69.88504,
  },
  {
    "A": 1,
    "L": 29.563244,
    "a": 55.959822,
    "b": -36.18907,
  },
  {
    "A": 1,
    "L": 29.567573,
    "a": 68.298653,
    "b": -112.02943,
  },
]
`;

exports[`ColorTranslator blending tests Blending with decimals snapshots 1`] = `
[
  "rgb(255 0 0)",
  "rgb(191.25 0 63.75)",
  "rgb(127.5 0 127.5)",
  "rgb(63.75 0 191.25)",
  "rgb(0 0 255)",
]
`;

exports[`ColorTranslator blending tests Blending with decimals snapshots 2`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(191.25 0 63.75 / 1)",
  "rgb(127.5 0 127.5 / 1)",
  "rgb(63.75 0 191.25 / 1)",
  "rgb(0 0 255 / 1)",
]
`;

exports[`ColorTranslator blending tests Blending with decimals snapshots 3`] = `
[
  "hsl(0 100% 50%)",
  "hsl(340 100% 37.5%)",
  "hsl(300 100% 25%)",
  "hsl(260 100% 37.5%)",
  "hsl(240 100% 50%)",
]
`;

exports[`ColorTranslator blending tests Blending with decimals snapshots 4`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(340 100% 37.5% / 1)",
  "hsl(300 100% 25% / 1)",
  "hsl(260 100% 37.5% / 1)",
  "hsl(240 100% 50% / 1)",
]
`;

exports[`ColorTranslator blending tests Blending with decimals snapshots 5`] = `
[
  "hwb(0 0% 0%)",
  "hwb(340 0% 25%)",
  "hwb(300 0% 50%)",
  "hwb(260 0% 25%)",
  "hwb(240 0% 0%)",
]
`;

exports[`ColorTranslator blending tests Blending with decimals snapshots 6`] = `
[
  "hwb(0 0% 0% / 1)",
  "hwb(340 0% 25% / 1)",
  "hwb(300 0% 50% / 1)",
  "hwb(260 0% 25% / 1)",
  "hwb(240 0% 0% / 1)",
]
`;

exports[`ColorTranslator blending tests Blending with decimals snapshots 7`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 63.75,
    "G": 0,
    "R": 191.25,
  },
  {
    "B": 127.5,
    "G": 0,
    "R": 127.5,
  },
  {
    "B": 191.25,
    "G": 0,
    "R": 63.75,
  },
  {
    "B": 255,
    "G": 0,
    "R": 0,
  },
]
`;

exports[`ColorTranslator blending tests Blending with decimals snapshots 8`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 63.75,
    "G": 0,
    "R": 191.25,
  },
  {
    "A": 1,
    "B": 127.5,
    "G": 0,
    "R": 127.5,
  },
  {
    "A": 1,
    "B": 191.25,
    "G": 0,
    "R": 63.75,
  },
  {
    "A": 1,
    "B": 255,
    "G": 0,
    "R": 0,
  },
]
`;

exports[`ColorTranslator blending tests Blending with decimals snapshots 9`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 340,
    "L": 37.5,
    "S": 100,
  },
  {
    "H": 300,
    "L": 25,
    "S": 100,
  },
  {
    "H": 260,
    "L": 37.5,
    "S": 100,
  },
  {
    "H": 240,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator blending tests Blending with decimals snapshots 10`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 340,
    "L": 37.5,
    "S": 100,
  },
  {
    "A": 1,
    "H": 300,
    "L": 25,
    "S": 100,
  },
  {
    "A": 1,
    "H": 260,
    "L": 37.5,
    "S": 100,
  },
  {
    "A": 1,
    "H": 240,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator blending tests Blending with decimals snapshots 11`] = `
[
  {
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "B": 25,
    "H": 340,
    "W": 0,
  },
  {
    "B": 50,
    "H": 300,
    "W": 0,
  },
  {
    "B": 25,
    "H": 260,
    "W": 0,
  },
  {
    "B": 0,
    "H": 240,
    "W": 0,
  },
]
`;

exports[`ColorTranslator blending tests Blending with decimals snapshots 12`] = `
[
  {
    "A": 1,
    "B": 0,
    "H": 0,
    "W": 0,
  },
  {
    "A": 1,
    "B": 25,
    "H": 340,
    "W": 0,
  },
  {
    "A": 1,
    "B": 50,
    "H": 300,
    "W": 0,
  },
  {
    "A": 1,
    "B": 25,
    "H": 260,
    "W": 0,
  },
  {
    "A": 1,
    "B": 0,
    "H": 240,
    "W": 0,
  },
]
`;
